# IA

./: .gitignore  .gitmodules  Me.ipynb  README.md
Algos/: CMakeLists.txt  DfsBfs.cpp  test.cpp
DL/: Tarea3.docx
DL/Latex/: Tarea1.tex
DL/Latex_Tarea_1/: bli.bib
DL/Latex_Tarea_2/: 1_Completo.nb  3_Completo.nb  4.nb  Tarea2.tex
DataMining/: DRIVER_STANDINGS.csv  Instructions.txt  RESULTS.csv  f1.pptx  redbull-create-userV2.sql
DataMining/GoldenFiles/: DRIVER_STANDING.txt  DRIVER_STANDINGS.csv  RESULTS.csv  Red Bull Racing_ Generate New Features.json  SAFETY_CAR.csv
MachineLearning/: HousingRegressorClase.ipynb  Housing_project.ipynb  Regulari.ipynb
MachineLearning/Classification _Titanic/: Titanic.ipynb  Untitled-1.ipynb
MachineLearning/Clustering/: KMEANS_Image_Compression_2.ipynb  (+2 more)
RLearning/: IMDB_Content_Based.ipynb  RL - CartPole.ipynb.txt
Sampling/: N-QUEEN GA.ipynb  Sampling_Examples.ipynb
Statistics/: Caso Resuelto_Análisis de la producción_Laboratorios ABC v2.docx  Como aprender estadística.pptx  Control Estadístico de Proceso.ppt  Errores comunes en los Reportes de Análisis Estadísticos.docx  Examen practico.docx  InferenciaEstadistica.docx  Inferencias estadísticas acerca de las medias v1 (3).pptx  LLantas eagle IV.docx  Plantilla_Analisis.docx  Pruebas de hipótesis v1.pptx  PruebasDeHipotesis.docx  Respuestas Examen práctico 1_ Distribuciones discretas v2.docx  Slides Distribuciones continuas de probabilidad.pptx  Slides_Estadística descriptiva_v2.ppt  Tarea_Laboratorio_ABC.docx  Tarea_Modelos_clase.docx  ~$antilla_Analisis.docx
(+141 files in other folders)
